fixed resource groups box when content overflowed

--- a/Web/css/booked.css
+++ b/Web/css/booked.css
@@ -2439,6 +2439,7 @@ ul.jqtree-tree .jqtree-toggler {
   border: solid 1px #999;
   z-index: 200;
   position: absolute;
+  overflow: scroll;
 }
 .groupName {
   font-size: 1.5em;
