--- a/Web/css/less/calendar.less
+++ b/Web/css/less/calendar.less
@@ -44,26 +44,26 @@
 //}
 
 .calendarHeading {
-	color: #666666;
-	border-bottom: solid 1px #666666;
-	padding: 10px 0px 3px 5px;;
-	margin-bottom: 10px;
-	font-size: 16pt;
-	font-weight: bold;
+  color: #666666;
+  border-bottom: solid 1px #666666;
+  padding: 10px 0px 3px 5px;;
+  margin-bottom: 10px;
+  font-size: 16pt;
+  font-weight: bold;
 }
 
 .calendarHeading a {
-	font-weight: normal;
-	font-size: 10pt;
+  font-weight: normal;
+  font-size: 10pt;
 }
 
 .noresults {
-	font-style: italic;
-	font-size: 14pt;
+  font-style: italic;
+  font-size: 14pt;
 }
 
 .fc-agenda-allday {
-	display: none;
+  display: none;
 }
 
 .fc-day-grid-event .fc-content {
@@ -71,22 +71,27 @@
 }
 
 .select2-results {
-  .schedule {font-weight:bold;}
-  .resource {padding-left: 15px;}
+  .schedule {
+    font-weight: bold;
+  }
+  .resource {
+    padding-left: 15px;
+  }
 }
 
 .calendar-subscription {
-	text-align: right;
-	padding: 10px 0;
+  text-align: right;
+  padding: 10px 0;
 }
 
 #calendar a, #calendar a:visited {
-	color: #fff;
+  color: #fff;
 }
 
 .unreservable.fc-event {
-  border:none;
+  border: none;
 }
+
 .reservable.fc-event {
   border: solid 1px @dark-gray;
   background-color: @lightest-gray;
@@ -95,47 +100,50 @@
 
 ul.jqtree-tree li.jqtree-selected > .jqtree-element,
 ul.jqtree-tree li.jqtree-selected > .jqtree-element:hover {
-	background: none;
-	font-weight: bold;
+  background: none;
+  font-weight: bold;
 }
 
 ul.jqtree-tree .jqtree-toggler {
-	top: 10%;
+  top: 10%;
 }
 
 #resourceGroupsContainer {
-	background-color: #fff;
-	padding:10px;
-	display: none;
-	width: 200px;
-	height: 300px;
-	border: solid 1px #999;
-	z-index:200;
-	position:absolute;
+  background-color: #fff;
+  padding: 10px;
+  display: none;
+  width: 200px;
+  height: 300px;
+  border: solid 1px #999;
+  z-index: 200;
+  position: absolute;
+  overflow: scroll;
 }
 
 .groupName {
-	font-size:1.5em;
-	font-weight: bold;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 #dayDialog, #deleteCustomLayoutDialog, #confirmCreateSlotDialog {
-  display:none;
+  display: none;
   background-color: @lightest-gray;
   border-color: @mid-gray;
-  position:absolute;
+  position: absolute;
   z-index: 2;
-  padding:12px;
+  padding: 12px;
 
-  a {padding: 0 5px }
+  a {
+    padding: 0 5px
+  }
 }
 
 .fc-day {
-	background-color: #fff;
+  background-color: #fff;
 }
 
 .fc-day-header {
-	background-color: @off-white;
+  background-color: @off-white;
 }
 
 #page-calendar, #page-my-calendar {
